<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UserLogInActivity" >

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Login form -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical" >

          <TextView
                    android:id="@+id/sign_in_info_textfield"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize= "30sp"
                    android:textColor="#58ACFA"
                    android:textStyle="bold"
                    
                    android:text="@string/sign_in_info_text" />

           <Button
                android:id="@+id/sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:textColor="#FFFFFF"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:background="@drawable/help_button"
                android:text="@string/sign_up_button" />

                


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:background="@drawable/update_button"
                 android:textColor="#FFFFFF"
                android:text="@string/action_sign_in_register" />

            <TextView
                android:id="@+id/forget_paswd_textfield"
          		android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/forget_paswd_text" />

            <Button
                android:id="@+id/sign_in_google_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/flood_map_button"
                 android:textColor="#FFFFFF"
                  android:layout_marginTop="16dp"
                android:text="@string/sign_in_google_button" />

            <Button
                android:id="@+id/sign_in_facebook_button"
                android:layout_width="match_parent"
                 android:textColor="#FFFFFF"
                  android:layout_marginTop="16dp"
                 android:background="@drawable/flood_map_button"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_facebook_button" />

            <Button
                android:id="@+id/skipButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:textColor="#FFFFFF"
                 android:background="@drawable/new_photo"
                android:text="@string/skip_button"/>
        </LinearLayout>
    </ScrollView>

</merge>