<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/AreaOfPolyImage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    
   <RelativeLayout  
    android:id="@+id/SurfaceAreaOfPolyImage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    
     </RelativeLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/green"
            android:background="@android:color/transparent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@android:drawable/alert_dark_frame" />

        <Button
            android:id="@+id/PolyImageHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="PressButtonToStorePoints"
            android:text="@string/Submit"
            android:visibility="visible" 
             android:alpha="0.5"/> 

        <TextView
            android:id="@+id/PolyForFlood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#006600"
            android:textColor="#CCFF00"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/waterLine" 
             android:visibility="visible" 
             />

        <Button
            android:id="@+id/Reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/PolyImageHere"
            android:onClick="PressButtonToReset"
            android:text="@string/Reset"
            android:visibility="visible"  
        	android:alpha="0.5"/>
       

    </RelativeLayout>
 